- Fixed bug #45751 (Using auto_prepend_file crashes (out of scope stack address
  use)). (basant dot kukreja at sun dot com) 
- Fixed bug #45705 (rfc822_parse_adrlist() modifies passed address parameter).
  (Jani)
- Fixed bug #45691 (Some per-dir or runtime settings may leak into other
  requests). (Moriyoshi)
- Fixed bug #45581 (htmlspecialchars() double encoding &#x hex items). (Arnaud)
- Fixed bug #45568 (ISAPI doesn't properly clear auth_digest in header).
  (Patch by: navara at emclient dot com)
- Fixed bug #45556 (Return value from callback isn't freed). (Felipe)
- Fixed bug #45555 (Segfault with invalid non-string as 
  register_introspection_callback). (Christian Seiler)
- Fixed bug #45553 (Using XPath to return values for attributes with a 
  namespace does not work). (Rob)
- Fixed bug #45486 (mb_send_mail(); header 'Content-Type: text/plain; charset=' 
  parsing incorrect). (Felipe)
- Fixed bug #45485 (strip_tags and <?XML tag). (Felipe)
- Fixed bug #45460 (imap patch for fromlength fix in imap_headerinfo doesn't 
  accept lengths of 1024). (Felipe, andrew at lifescale dot com)
- Fixed bug #45449 (filesize() regression using ftp wrapper). 
  (crrodriguez at suse dot de)
- Fixed bug #45423 (fastcgi parent process doesn't invoke php_module_shutdown
  before shutdown) (basant dot kukreja at sun dot com)
- Fixed bug #45406 (session.serialize_handler declared by shared extension 
  fails). (Kalle, oleg dot grenrus at dynamoid dot com)
- Fixed bug #45405 (snmp extension memory leak). (Federico Cuello, Rodrigo
  Campos)
- Fixed bug #45392 (ob_start()/ob_end_clean() and memory_limit). (Arnaud)
- Fixed bug #45352 (Segmentation fault because of tick function on second
  request). (Dmitry)
- Fixed bug #45312 (Segmentation fault on second request for array functions).
  (Dmitry)
- Fixed bug #45251 (double free or corruption with setAttributeNode()). (Rob)
- Fixed bug #45226 and #18916 (xmlrpc_set_type() segfaults and wrong behavior 